# Bichangi-Agent

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
config/: assistant.json  assistant.yaml
docs/: assistant-questions.md  assistant-spec.md  build-brief.md  integration-setup.md
public/: app.js  index.html  styles.css
scripts/: set-secrets.ps1
src/codex_secretary/: __init__.py  cli.py  graph.py  runner.py  web_app.py
worker/: agents.ts  auth.ts  calendar.ts  diagnostics.ts  feed.ts  gemini.ts  index.ts  kakao.ts  news.ts  report.ts  storage.ts  types.ts  util.ts
