[project]
name = "codex-secretary"
version = "0.1.0"
description = "A LangGraph-based personal assistant shaped through a question graph."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
codex-secretary = "codex_secretary.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_secretary"]
